--- a/front-end/assets/css/bringste.css
+++ b/front-end/assets/css/bringste.css
@@ -96,3 +96,17 @@ body {
   margin: -6px 0 0 0px;
 }
 
+.blankslate {
+  position: absolute;
+
+  top: 50%;
+
+  width: 80%;
+  height: auto;
+
+  margin: -90px 10% 0 10%;
+
+  max-width: 533px;
+  max-height: 192px;
+}
+
