--- a/front-end/assets/css/bringste.css
+++ b/front-end/assets/css/bringste.css
@@ -130,3 +130,16 @@ body {
   font-weight: 300;
 }
 
+.bar-tab .tab-item {
+  position: relative;
+}
+
+.bar-tab .tab-item .badge {
+  position: absolute;
+  right: -13px;
+  top: -8px;
+  z-index: 99;
+/*  position: absolute;
+  right: 21px;
+  z-index: 99;*/
+}
