marking delivered and payed cards as such

--- a/front-end/assets/css/bringste.css
+++ b/front-end/assets/css/bringste.css
@@ -25,6 +25,12 @@ body {
   border-top: none;
 }
 
+.card-fadeout {
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)"; 
+  filter: alpha(opacity=50);
+  opacity: 0.5;
+}
+
 .map-wrapper {
   height: 100%;
 }
