--- a/front-end/assets/css/bringste.css
+++ b/front-end/assets/css/bringste.css
@@ -163,3 +163,21 @@ body {
   background-color: #fff;
   border: none;
 }
+
+.bar-nav ~ .content-settings {
+  padding: 0;
+}
+
+.input-group-settings {
+  margin: 0 0 10px 0;
+}
+
+.bar-nav ~ .content-settings h4.ui-settings, .bar-nav ~ .content-settings a.ui-settings {
+  margin: 46px 15px 10px;
+  width: auto;
+}
+
+.bar-nav ~ .content-settings a.ui-settings {
+  margin-top: 10px;
+  width: auto;
+}
