--- a/server/src/main/webapp/mobile/assets/css/bringste.css
+++ b/server/src/main/webapp/mobile/assets/css/bringste.css
@@ -35,19 +35,22 @@ body {
 }
 
 .card-fadeout {
-  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)"; 
+  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
   filter: alpha(opacity=50);
   opacity: 0.5;
 }
 
-.map-wrapper {
-  height: 100%;
+.map {
+  padding: 0 !important;
 }
-.map-wrapper .map{
+
+.map > div {
   position:absolute;
   top:0;
   bottom:0;
+
   width:100%;
+  height: 100%;
 }
 
 .card-wrapper-active .card-list {
